--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="162dp"
         android:layout_height="61dp"
         android:layout_marginTop="120dp"
+        android:onClick="toParent"
         android:text="@string/buttonParent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
