--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,10 @@
         android:name="com.example.suivi_eleve.ui.Evenements.EvenementsFragment"
         android:label="@string/title_evenements"
         tools:layout="@layout/fragment_evenements" />
+
+    <fragment
+        android:id="@+id/navigation_chat"
+        android:name="com.example.suivi_eleve.ui.Chat.ChatFragment"
+        android:label="@string/title_chat"
+        tools:layout="@layout/fragment_chat" />
 </navigation>
