--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -28,4 +28,10 @@
         android:name="com.example.suivi_eleve.ui.Chat.ChatFragment"
         android:label="@string/title_chat"
         tools:layout="@layout/fragment_chat" />
+
+    <fragment
+        android:id="@+id/navigation_Photos"
+        android:name="com.example.suivi_eleve.ui.Photos_Evenements.PhotoFragment"
+        android:label="@string/title_photos"
+        tools:layout="@layout/fragment_photo" />
 </navigation>
