tableau de bord enseignant fait avec les differents boutons et navigation drawer ajouter avec les differents composants

--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    >
 
+    <group android:checkableBehavior="single">
     <item
         android:id="@+id/eleve_1"
         android:title="Eleve 1" />
     <item
         android:id="@+id/eleve_2"
         android:title="Eleve 2" />
-
+    </group>
 </menu>
