design for activites to do finsished
Signed-off-by: Maximoze <maguette357@gmail.com>

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="270dp"
     android:background="@color/colorAccent"
@@ -9,13 +10,26 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     >
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="254dp"
+        android:layout_height="243dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="11dp"
+        android:layout_marginEnd="-7dp"
+        app:srcCompat="@drawable/school" />
+
     <ImageButton
         android:id="@+id/profilButton"
         android:layout_width="95dp"
         android:layout_height="77dp"
         android:layout_above="@+id/username"
         android:layout_alignParentStart="false"
-        android:layout_marginStart="3dp"
+        android:layout_marginStart="-1dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/profil" />
 
@@ -25,9 +39,10 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/mailtext"
         android:layout_alignParentStart="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:layout_marginBottom="10dp"
         android:text="Username"
+        android:textColor="@color/cardview_light_background"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
@@ -36,7 +51,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:layout_marginBottom="15dp"
+        android:textColor="@color/cardview_light_background"
         android:text="Username@email.com" />
 </RelativeLayout>
