--- a/app/src/main/res/layout/activity_parent_acceuil.xml
+++ b/app/src/main/res/layout/activity_parent_acceuil.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:paddingTop="?attr/actionBarSize"
     android:fitsSystemWindows="true"
-    tools:openDrawer="end">
+    tools:openDrawer="start">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
