--- a/app/src/main/res/layout/fragment_activites.xml
+++ b/app/src/main/res/layout/fragment_activites.xml
@@ -1,19 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/text_home"
-        android:layout_width="match_parent"
+        android:layout_width="288dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="61dp"
+        android:layout_marginTop="27dp"
+        android:layout_marginEnd="62dp"
+        android:drawableStart="@drawable/activite"
+        android:text="@string/title_activites"
+        android:textAlignment="textStart"
+        android:textColor="@color/c3"
+        android:textSize="24sp" />
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="395dp"
+        android:layout_height="552dp"
+        android:layout_below="@+id/text_home"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="0dp"
+        android:fillViewport="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/imageView2"
+                android:layout_width="wrap_content"
+                android:layout_height="216dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginEnd="0dp"
+                android:contentDescription="Image activity"
+                android:src="@drawable/activite" />
+
+            <TextView
+                android:id="@+id/libeleactivite"
+                android:layout_width="192dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView2"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/libele_activite"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/typeactivite"
+                android:layout_width="192dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/libeleactivite"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="1dp"
+                android:text="@string/type_activites"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/dateactivite"
+                android:layout_width="192dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/typeactivite"
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="43dp"
+                android:text="@string/date_limite"
+                android:textSize="18sp" />
+        </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="176dp"
+        android:layout_height="1dp"
+        android:layout_below="@+id/text_home"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="116dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="119dp"
+        android:background="@color/c3" />
+
+</RelativeLayout>
