--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -4,11 +4,13 @@
     >
 
     <group android:checkableBehavior="single">
-    <item
-        android:id="@+id/eleve_1"
-        android:title="Eleve 1" />
-    <item
-        android:id="@+id/eleve_2"
-        android:title="Eleve 2" />
+        <item
+            android:id="@+id/eleve_1"
+            android:icon="@drawable/student_male"
+            android:title="Eleve 1" />
+        <item
+            android:id="@+id/eleve_2"
+            android:icon="@drawable/students_female"
+            android:title="Eleve 2" />
     </group>
 </menu>
