--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#D81B60</color>
     <color name="c1">#65c69d</color>
     <color name="c2">#666f78</color>
-    <color name="c3">#353e47</color>
+    <color name="c3">#0B0E10</color>
 </resources>
