--- a/app/src/main/res/layout/fragment_activites.xml
+++ b/app/src/main/res/layout/fragment_activites.xml
@@ -54,7 +54,7 @@
 
             <TextView
                 android:id="@+id/libeleactivite"
-                android:layout_width="192dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/imageView2"
                 android:layout_alignParentStart="true"
@@ -65,7 +65,7 @@
 
             <TextView
                 android:id="@+id/typeactivite"
-                android:layout_width="192dp"
+                android:layout_width="60dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/libeleactivite"
                 android:layout_alignParentStart="true"
@@ -76,7 +76,7 @@
 
             <TextView
                 android:id="@+id/dateactivite"
-                android:layout_width="192dp"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/typeactivite"
                 android:layout_alignParentStart="true"
@@ -84,6 +84,42 @@
                 android:layout_marginTop="0dp"
                 android:layout_marginBottom="43dp"
                 android:text="@string/date_limite"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/libelecontent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/imageView2"
+                android:layout_marginStart="51dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="342dp"
+                android:layout_toEndOf="@+id/libeleactivite"
+                android:text="Libellé content"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/typecontent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/libeleactivite"
+                android:layout_marginStart="51dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="342dp"
+                android:layout_toEndOf="@+id/typeactivite"
+                android:text="Type content"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/datecontent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/typeactivite"
+                android:layout_marginStart="22dp"
+                android:layout_marginTop="0dp"
+                android:layout_marginBottom="342dp"
+                android:layout_toEndOf="@+id/dateactivite"
+                android:text="Date content"
                 android:textSize="18sp" />
         </RelativeLayout>
     </androidx.core.widget.NestedScrollView>
