--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -1,16 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/eleve_1"
-            android:icon="@drawable/student_male"
-            android:title="Eleve 1" />
-        <item
-            android:id="@+id/eleve_2"
-            android:icon="@drawable/students_female"
-            android:title="Eleve 2" />
+        <item android:id="@+id/profileparents"
+            android:icon="@drawable/profil"
+            android:title="Profil"/>
+
     </group>
+
+
+    <item android:title="Gestoin de de vos enfants">
+        <menu>
+            <item
+                android:id="@+id/eleve_1"
+                android:icon="@drawable/student_male"
+                android:title="Eleve 1" />
+            <item
+                android:id="@+id/eleve_2"
+                android:icon="@drawable/students_female"
+                android:title="Eleve 2" />
+        </menu>
+    </item>
+
+    <item android:title="Communication">
+        <menu>
+            <item
+                android:id="@+id/contact"
+                android:icon="@drawable/ic_contacts_black_24dp"
+                android:title="Contacter l'administrateur" />
+
+        </menu>
+    </item>
+
 </menu>
