--- a/app/src/main/res/layout/fragment_activites.xml
+++ b/app/src/main/res/layout/fragment_activites.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="?attr/colorBackgroundFloating">
 
     <TextView
         android:id="@+id/text_home"
@@ -22,107 +23,18 @@
         android:textColor="@color/c3"
         android:textSize="24sp" />
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="395dp"
-        android:layout_height="552dp"
-        android:layout_below="@+id/text_home"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="631dp"
+        android:layout_below="@+id/divider"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="0dp"
-        android:layout_marginBottom="0dp"
-        android:fillViewport="true">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="wrap_content"
-                android:layout_height="216dp"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="13dp"
-                android:layout_marginEnd="0dp"
-                android:contentDescription="Image activity"
-                android:src="@drawable/activite" />
-
-            <TextView
-                android:id="@+id/libeleactivite"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imageView2"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="16dp"
-                android:text="@string/libele_activite"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/typeactivite"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/libeleactivite"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="1dp"
-                android:text="@string/type_activites"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/dateactivite"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/typeactivite"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginBottom="43dp"
-                android:text="@string/date_limite"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/libelecontent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/imageView2"
-                android:layout_marginStart="51dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="342dp"
-                android:layout_toEndOf="@+id/libeleactivite"
-                android:text="Libellé content"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/typecontent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/libeleactivite"
-                android:layout_marginStart="51dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginBottom="342dp"
-                android:layout_toEndOf="@+id/typeactivite"
-                android:text="Type content"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/datecontent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/typeactivite"
-                android:layout_marginStart="22dp"
-                android:layout_marginTop="0dp"
-                android:layout_marginBottom="342dp"
-                android:layout_toEndOf="@+id/dateactivite"
-                android:text="Date content"
-                android:textSize="18sp" />
-        </RelativeLayout>
-    </androidx.core.widget.NestedScrollView>
+        android:layout_marginBottom="0dp" />
 
     <View
         android:id="@+id/divider"
