--- a/app/src/main/res/layout/activity_observation.xml
+++ b/app/src/main/res/layout/activity_observation.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="45dp"
         android:drawableStart="@drawable/observation"
         android:gravity="left|center_vertical"
@@ -22,6 +22,8 @@
         android:textColor="@color/c3"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.838"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
@@ -67,7 +69,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="25dp"
             android:layout_marginTop="73dp"
-            android:text="eleve" />
+            android:text="@string/eleve" />
 
         //type
 
@@ -81,11 +83,14 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_marginStart="23dp"
             android:layout_marginTop="53dp"
             android:layout_marginEnd="11dp"
+            android:layout_marginBottom="63dp"
+            android:layout_toEndOf="@+id/eleve"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="eleve" />
+            android:text="@string/eleve" />
 
         <TextView
             android:id="@+id/typeO"
@@ -95,7 +100,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="25dp"
             android:layout_marginTop="85dp"
-            android:text="Type" />
+            android:text="@string/Type" />
 
         <EditText
             android:id="@+id/contenu_type"
@@ -104,12 +109,14 @@
             android:layout_above="@+id/contenu_note"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_marginStart="11dp"
             android:layout_marginTop="161dp"
             android:layout_marginEnd="14dp"
             android:layout_marginBottom="54dp"
+            android:layout_toEndOf="@+id/typeO"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="type" />
+            android:text="@string/type" />
 
         <TextView
             android:id="@+id/note"
@@ -119,7 +126,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginStart="25dp"
             android:layout_marginTop="84dp"
-            android:text="Note" />
+            android:text="@string/Note" />
 
         <EditText
             android:id="@+id/contenu_note"
@@ -133,7 +140,7 @@
             android:layout_toEndOf="@+id/note"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="Note" />
+            android:text="@string/Note" />
 
 
     </RelativeLayout>
