--- a/app/src/main/res/layout/activity_rappel.xml
+++ b/app/src/main/res/layout/activity_rappel.xml
@@ -20,8 +20,12 @@
         android:text="@string/title_faire_lappel"
         android:textColor="@color/c3"
         android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.029" />
 
     <View
         android:id="@+id/divider_rappel"
