Partie créer et voir activité entièrement terminiées

--- a/app/src/main/res/layout/fragment_activites.xml
+++ b/app/src/main/res/layout/fragment_activites.xml
@@ -8,15 +8,15 @@
 
     <TextView
         android:id="@+id/text_home"
-        android:layout_width="288dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="61dp"
+        android:layout_marginStart="112dp"
         android:layout_marginTop="27dp"
-        android:layout_marginEnd="62dp"
+        android:layout_marginEnd="107dp"
         android:drawableStart="@drawable/activite"
         android:text="@string/title_activites"
         android:textAlignment="textStart"
