--- a/app/src/main/res/layout/activity_enseignant_dashbord.xml
+++ b/app/src/main/res/layout/activity_enseignant_dashbord.xml
@@ -56,7 +56,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="24dp"
             android:layout_marginTop="71dp"
-            android:background="@drawable/rappel" />
+            android:background="@drawable/rappel"/>
 
         <ImageButton
             android:id="@+id/activite"
@@ -96,6 +96,51 @@
             android:layout_toEndOf="@+id/evenement"
             android:background="@drawable/observation" />
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="191dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/rappel"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="21dp"
+            android:layout_marginTop="-2dp"
+            android:layout_marginEnd="115dp"
+            android:text="@string/title_Rappel"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="191dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/observation"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="-68dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/title_Activites"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="191dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="117dp"
+            android:layout_marginBottom="29dp"
+            android:text="@string/title_evenements"
+            android:textSize="24sp" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="191dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="-38dp"
+            android:layout_marginBottom="29dp"
+            android:text="@string/title_observations"
+            android:textSize="22sp" />
 
 
     </RelativeLayout>
