--- a/app/src/main/res/layout/activity_evenement.xml
+++ b/app/src/main/res/layout/activity_evenement.xml
@@ -9,20 +9,14 @@
 
     <TextView
         android:id="@+id/text_ajout_evenement"
-        android:layout_width="336dp"
-        android:layout_height="102dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="36dp"
-        android:drawableStart="@drawable/evenement"
-        android:gravity="left|center_vertical"
         android:text="@string/title_creer_un_evenement"
         android:textColor="@color/c3"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintHorizontal_bias="0.602"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -30,38 +24,23 @@
         android:id="@+id/divider_evenement"
         android:layout_width="180dp"
         android:layout_height="1dp"
-        android:layout_below="@+id/text_ajout_evenement"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="false"
         android:background="@color/c3"
         android:foregroundGravity="center"
-        app:layout_constraintBottom_toBottomOf="@+id/text_ajout_evenement"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
-        app:layout_constraintStart_toStartOf="@+id/text_ajout_evenement"
-        app:layout_constraintTop_toTopOf="@+id/text_ajout_evenement"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_ajout_evenement" />
 
     <RelativeLayout
         android:id="@+id/evenement_formulaire_contenair"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/divider_evenement"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
         android:layout_marginStart="14dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="11dp"
         android:background="@drawable/roud_background"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.56"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_ajout_evenement">
-
-
-        //libelle
-
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="251dp"
@@ -88,8 +67,6 @@
                 android:textColorHint="#004D40" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        // type
-
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="251dp"
             android:layout_height="60dp"
@@ -115,7 +92,6 @@
                 android:hint="@string/title_hint_type_ajout_evenement"
                 android:textColorHint="#004D40" />
         </com.google.android.material.textfield.TextInputLayout>
-        //Description
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="251dp"
@@ -143,8 +119,6 @@
                 android:textColorHint="#004D40" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        //Heure
-
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="251dp"
             android:layout_height="60dp"
@@ -170,8 +144,6 @@
                 android:hint="@string/title_hint_type_ajout_heure"
                 android:textColorHint="#004D40" />
         </com.google.android.material.textfield.TextInputLayout>
-
-        //Date
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="251dp"
@@ -199,7 +171,7 @@
                 android:textColorHint="#004D40" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        //Lieu
+
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="251dp"
@@ -227,7 +199,6 @@
                 android:textColorHint="#004D40" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        //Cotisation
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="251dp"
@@ -263,22 +234,15 @@
         android:layout_width="218dp"
         android:layout_height="48dp"
         android:layout_below="@+id/evenement_formulaire_contenair"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="89dp"
         android:layout_marginTop="32dp"
-        android:layout_marginEnd="104dp"
-        android:layout_marginBottom="17dp"
+        android:layout_marginEnd="89dp"
         android:background="@drawable/roud_background"
         android:gravity="center"
         android:text="@string/Ajouter"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/evenement_formulaire_contenair"
-        app:layout_constraintVertical_bias="0.962" />
+        app:layout_constraintTop_toBottomOf="@+id/evenement_formulaire_contenair" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
