--- a/app/src/main/res/layout/activity_rappel.xml
+++ b/app/src/main/res/layout/activity_rappel.xml
@@ -8,41 +8,35 @@
 
     <TextView
         android:id="@+id/text_faire_lappel"
-        android:layout_width="336dp"
-        android:layout_height="102dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
+        android:layout_width="191dp"
+        android:layout_height="wrap_content"
+
         android:layout_alignParentEnd="true"
         android:layout_marginTop="28dp"
         android:layout_marginEnd="36dp"
-        android:drawableStart="@drawable/rappel"
-        android:gravity="left|center_vertical"
         android:text="@string/title_faire_lappel"
         android:textColor="@color/c3"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
+        app:layout_constraintHorizontal_bias="0.722"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.029" />
+        app:layout_constraintVertical_bias="0.031" />
 
     <View
         android:id="@+id/divider_rappel"
         android:layout_width="180dp"
         android:layout_height="1dp"
-        android:layout_below="@+id/text_faire_lappel"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_centerHorizontal="false"
+        android:layout_marginEnd="132dp"
         android:background="@color/c3"
         android:foregroundGravity="center"
         app:layout_constraintBottom_toBottomOf="@+id/text_faire_lappel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.363"
-        app:layout_constraintStart_toStartOf="@+id/text_faire_lappel"
-        app:layout_constraintTop_toTopOf="@+id/text_faire_lappel"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/text_faire_lappel"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
