--- a/app/src/main/res/layout/row_evenement.xml
+++ b/app/src/main/res/layout/row_evenement.xml
@@ -15,7 +15,7 @@
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/nom_evenement"
+            android:id="@+id/Nom_eleve"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageActivite"
@@ -26,10 +26,10 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/typeevenenent"
+            android:id="@+id/typeobservation"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/nom_evenement"
+            android:layout_below="@+id/Nom_eleve"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="16dp"
@@ -38,10 +38,10 @@
 
 
         <TextView
-            android:id="@+id/descriptionevenenent"
+            android:id="@+id/noteObservation"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/typeevenenent"
+            android:layout_below="@+id/typeobservation"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="16dp"
@@ -50,10 +50,10 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/heureevenenent"
+            android:id="@+id/dateObervation"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/descriptionevenenent"
+            android:layout_below="@+id/noteObservation"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="-24dp"
@@ -62,10 +62,10 @@
             android:textSize="18sp" />
 
         <TextView
-            android:id="@+id/dateevenenent"
+            android:id="@+id/dateObservation"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/heureevenenent"
+            android:layout_below="@+id/dateObervation"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="-24dp"
@@ -77,7 +77,7 @@
             android:id="@+id/lieuevenenent"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/dateevenenent"
+            android:layout_below="@+id/dateObservation"
             android:layout_alignParentStart="true"
             android:layout_marginStart="0dp"
             android:layout_marginTop="-24dp"
@@ -108,7 +108,7 @@
             android:layout_marginStart="67dp"
             android:layout_marginTop="30dp"
             android:layout_marginBottom="342dp"
-            android:layout_toEndOf="@+id/nom_evenement"
+            android:layout_toEndOf="@+id/Nom_eleve"
             android:text="@string/nom_content_ev"
             android:textSize="18sp" />
 
@@ -116,11 +116,11 @@
             android:id="@+id/typecontent_ev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/nom_evenement"
+            android:layout_below="@+id/Nom_eleve"
             android:layout_marginStart="67dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="342dp"
-            android:layout_toEndOf="@+id/nom_evenement"
+            android:layout_toEndOf="@+id/Nom_eleve"
             android:text="@string/Type_content_ev"
             android:textSize="18sp" />
 
@@ -128,11 +128,11 @@
             android:id="@+id/descriptioncontent_ev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/typeevenenent"
+            android:layout_below="@+id/typeobservation"
             android:layout_marginStart="67dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="342dp"
-            android:layout_toEndOf="@+id/typeevenenent"
+            android:layout_toEndOf="@+id/typeobservation"
             android:text="@string/description_content_ev"
             android:textSize="18sp" />
 
@@ -140,7 +140,7 @@
             android:id="@+id/heurecontent_ev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/descriptionevenenent"
+            android:layout_below="@+id/noteObservation"
             android:layout_marginStart="130dp"
             android:layout_marginTop="-24dp"
             android:layout_marginBottom="342dp"
@@ -151,7 +151,7 @@
             android:id="@+id/datecontent_ev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/heureevenenent"
+            android:layout_below="@+id/dateObervation"
             android:layout_marginStart="130dp"
             android:layout_marginTop="-24dp"
             android:layout_marginBottom="342dp"
@@ -162,7 +162,7 @@
             android:id="@+id/lieucontent_ev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/dateevenenent"
+            android:layout_below="@+id/dateObservation"
             android:layout_marginStart="130dp"
             android:layout_marginTop="-24dp"
             android:layout_marginBottom="342dp"
