--- a/app/src/main/res/layout/publication_parent.xml
+++ b/app/src/main/res/layout/publication_parent.xml
@@ -92,27 +92,18 @@
         app:layout_constraintTop_toBottomOf="@+id/imageActivite" />
 
 
-    <com.google.android.material.textfield.TextInputLayout
-
-
-        android:layout_width="308dp"
-        android:layout_height="126dp"
-        android:layout_below="@+id/imageadded"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:background="@drawable/bordure"
-        android:textColorHint="#004D40"
-        app:hintAnimationEnabled="true"
-        app:hintEnabled="true"
-        app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
+    <TextView
+        android:id="@+id/datecontent"
+        android:layout_width="251dp"
+        android:layout_height="140dp"
+        android:layout_below="@+id/description"
+        android:layout_toEndOf="@+id/dateactivite"
+        android:text="@string/Libellé_content"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ajout"
-        app:layout_constraintHorizontal_bias="0.47"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description"
-        app:layout_constraintVertical_bias="0.272">
-
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintVertical_bias="0.38"
+        tools:layout_editor_absoluteX="32dp" />
 
     <ImageButton
         android:id="@+id/ajout"
